2009-01-21  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up to #10195: htmlArea RTE: Update RTE about info
	* Added feature #10219: htmlArea RTE: Clean up unused localization files
	* Fixed bug #9785: htmlArea RTE: Disabling images in RTE still leaves the toolbar button
	* Fixed bug #9965: htmlArea RTE: IE jumps down to last RTE input

2009-01-20  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #10206: htmlArea RTE: Allow to hide any button

2009-01-20  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #9774: Incorrect validation of allowed classes in RTE transformation

2009-01-20  Ingmar Schlecht  <ingmar@typo3.org>

	* Fixed bug #10186: Time shifting (again) in datetime fields (followup to Bug#8746; thanks to Ernesto Baschny)
	* Fixed bug #10146: Session fixation vulnerability in user authentication  (thanks to the TYPO3 Security Team and especially Marcus Krause)
	* Fixed bug #10159: XSS vulnerability in workspace module (thanks to the TYPO3 Security Team and especially Marcus Krause)

2009-01-20  Ingo Renner  <ingo@typo3.org>

	* Added missing license statement for using the "Silk" icon set of Mark James according to Creative Commons Attribution 2.5
	* Fixed bug #10134: XSS vulnerability in sysext indexed_search (thanks to the TYPO3 Security Team and especially Marcus Krause)
	* Fixed bug #10133: Command execution in sysext indexed_search (thanks to the TYPO3 Security Team and especially Marcus Krause)
	* Fixed bug #10154: Weak encryption key generation vulnerability in sysext install (thanks to the TYPO3 Security Team, and especially Marcus Krause)
	* Fixed bug #9705: Moving page in WS will hide it from editors due to missing access settings of placeholder (thanks to Franz-Xaver Koch and Michael Stucki)

2009-01-19  Steffen Kamper  <info@sk-typo3.de>

    *  Fixed bug #10183: [felogin] redirect doesn't work with return_url

2009-01-19  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #10181: htmlArea RTE: Move status bar to plugin