@@ -1,3 +1,7 @@
+2009-01-20  Steffen Kamper  <info@sk-typo3.de>
+
+	* Fixed bug #10220: Feature: Get some unit tests for the core (thanks to Oliver Klee)
+
 2009-01-21  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Follow-up to #10195: htmlArea RTE: Update RTE about info
